@@ -76,6 +76,17 @@ class DefaultProgramRuleService implements ProgramRuleService {
 
   private final RuleActionEventMapper ruleActionEventMapper;
 
+  /**
+   * This is calculating the rule effects for all the enrollments and events present in the payload.
+   * First, this method is iterating over the enrollments present in the payload and related events
+   * (also the ones not present in the payload) and it is calculating rule effects for those. The,
+   * this method is iterating over events present in the payload and related enrollment (also if it
+   * is not present in the payload) and it is calculating rule effects for those. {@link
+   * #calculateTrackerEventRuleEffects(TrackerBundle, TrackerPreheat)} method makes sure that rule
+   * effects are calculated only once for every event. This ensures that there will be no duplicate
+   * effects. Finally, this method is iterating over all program events present in the payload, and
+   * it is calculating rule effects for those.
+   */
   @Override
   @Transactional(readOnly = true)
   public void calculateRuleEffects(TrackerBundle bundle, TrackerPreheat preheat) {
@@ -110,7 +121,7 @@ class DefaultProgramRuleService implements ProgramRuleService {
                       getAttributes(e.getEnrollment(), e.getTrackedEntity(), bundle, preheat))
                   .stream();
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<RuleEffects> calculateTrackerEventRuleEffects(
@@ -135,7 +146,7 @@ class DefaultProgramRuleService implements ProgramRuleService {
                             bundle,
                             preheat))
                     .stream())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<RuleEffects> calculateProgramEventRuleEffects(
@@ -155,7 +166,7 @@ class DefaultProgramRuleService implements ProgramRuleService {
                   .evaluateProgramEvents(new HashSet<>(events), entry.getKey())
                   .stream();
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   // Get all the attributes linked to enrollment from the payload and the DB,
@@ -181,14 +192,12 @@ class DefaultProgramRuleService implements ProgramRuleService {
 
     if (trackedEntity != null) {
       List<String> payloadAttributeValuesIds =
-          payloadAttributeValues.stream()
-              .map(av -> av.getAttribute().getUid())
-              .collect(Collectors.toList());
+          payloadAttributeValues.stream().map(av -> av.getAttribute().getUid()).toList();
 
       attributeValues.addAll(
           trackedEntity.getTrackedEntityAttributeValues().stream()
               .filter(av -> !payloadAttributeValuesIds.contains(av.getAttribute().getUid()))
-              .collect(Collectors.toList()));
+              .toList());
     }
 
     return attributeValues;
